--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_3351942_6mrwnyx2d5d.css">
     <meta name="referrer" content="no-referrer" />
     <title>沉默头条</title>
   </head>
